[package]
name = "ac-ffmpeg"
version = "0.15.0"
authors = ["Angelcam, Inc. <dev@angelcam.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/ac-ffmpeg/"
repository = "https://github.com/angelcam/rust-ac-ffmpeg"
description = """
Simple and safe Rust interface for FFmpeg libraries.
"""
keywords = ["ffmpeg", "audio", "video", "codec", "multimedia"]

[dependencies]
bytes       = "0.5"
lazy_static = "1.4"
libc        = "0.2"

[build-dependencies]
cc         = "1.0"
pkg-config = "0.3"

[dev-dependencies]
clap = "2.33"
