[package]
name = "ac-ffmpeg-features"
version = "0.1.0"
authors = ["Angelcam, Inc. <dev@angelcam.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/angelcam/rust-ac-ffmpeg"
description = """
Helper crate for resolving FFmpeg features during ac-ffmpeg build.
"""
keywords = ["ffmpeg"]

[build-dependencies]
cc = "1.0"

[build-dependencies.ac-ffmpeg-build]
version = "=0.1"
path = "../ac-ffmpeg-build"
