[package]
name = "ac-ffmpeg"
version = "0.18.1"
authors = ["Angelcam, Inc. <dev@angelcam.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/ac-ffmpeg/"
repository = "https://github.com/angelcam/rust-ac-ffmpeg"
description = """
Simple and safe Rust interface for FFmpeg libraries.
"""
keywords = ["ffmpeg", "audio", "video", "codec", "multimedia"]

[dependencies]
lazy_static = "1.4"

[build-dependencies]
cc = "1.0"
rustc_version = "0.4"

[build-dependencies.ac-ffmpeg-build]
version = "=0.1"
path = "../ac-ffmpeg-build"

[build-dependencies.ac-ffmpeg-features]
version = "=0.1"
path = "../ac-ffmpeg-features"

[dev-dependencies]
clap = "2.33"
